// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bar Spacing Decorator 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "marginTop": "20px",
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    className="css-text-76zvg2"
    dir="auto"
  >
    I am in Storybook!
  </div>
</div>
`;

exports[`Centered Decorator 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitAlignItems": "center",
      "WebkitBoxAlign": "center",
      "WebkitBoxDirection": "normal",
      "WebkitBoxFlex": 1,
      "WebkitBoxOrient": "horizontal",
      "WebkitBoxPack": "center",
      "WebkitFlexBasis": "0%",
      "WebkitFlexDirection": "row",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "WebkitJustifyContent": "center",
      "alignItems": "center",
      "bottom": "0px",
      "flexBasis": "0%",
      "flexDirection": "row",
      "flexGrow": 1,
      "flexShrink": 1,
      "justifyContent": "center",
      "left": "0px",
      "msFlexAlign": "center",
      "msFlexDirection": "row",
      "msFlexNegative": 1,
      "msFlexPack": "center",
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
      "position": "absolute",
      "right": "0px",
      "top": "0px",
    }
  }
>
  <div
    className="css-text-76zvg2"
    dir="auto"
  >
    I am in Storybook!
  </div>
</div>
`;

exports[`Lateral Spacing Decorator 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "marginLeft": "20px",
      "marginRight": "20px",
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    className="css-text-76zvg2"
    dir="auto"
  >
    I am in Storybook!
  </div>
</div>
`;

exports[`StrictWrapper to wrap child components in Strict Mode 1`] = `
<div
  className="css-text-76zvg2"
  dir="auto"
>
  I am in Storybook!
</div>
`;

exports[`The showcase converter should add a decorator between stories 1`] = `
Array [
  Object {
    "component": <StrictWrapper>
      <div>
        Hello World!
      </div>
    </StrictWrapper>,
    "name": "My Story",
  },
  <div>
    Some decorator
  </div>,
  Object {
    "component": <StrictWrapper>
      <div>
        Hello World Again!
      </div>
    </StrictWrapper>,
    "name": "My Story 2",
  },
]
`;

exports[`The showcase converter should add a single story 1`] = `
Array [
  Object {
    "component": <StrictWrapper>
      <div>
        Hello World!
      </div>
    </StrictWrapper>,
    "name": "My Story",
  },
]
`;

exports[`The showcase converter should add a story with a decorator 1`] = `
Array [
  <div>
    Some decorator
  </div>,
  Object {
    "component": <StrictWrapper>
      <div>
        Hello World!
      </div>
    </StrictWrapper>,
    "name": "My Story",
  },
]
`;

exports[`The showcase converter should add two stories 1`] = `
Array [
  Object {
    "component": <StrictWrapper>
      <div>
        Hello World!
      </div>
    </StrictWrapper>,
    "name": "My Story 1",
  },
  Object {
    "component": <StrictWrapper>
      <div>
        Hello World Again!
      </div>
    </StrictWrapper>,
    "name": "My Story 2",
  },
]
`;

exports[`The showcase converter should filter stories by platform 1`] = `
Array [
  Object {
    "component": <StrictWrapper>
      <div>
        All!
      </div>
    </StrictWrapper>,
    "name": "All platforms",
  },
  Object {
    "component": <StrictWrapper>
      <div>
        Web!
      </div>
    </StrictWrapper>,
    "name": "Web only",
  },
]
`;

exports[`The showcase converter should provide the action to a story 1`] = `
Array [
  Object {
    "component": <StrictWrapper>
      <div>
        Hello World!
      </div>
    </StrictWrapper>,
    "name": "My Story",
  },
]
`;

exports[`The showcase converter should provide the color knob to a story 1`] = `
Array [
  Object {
    "component": <StrictWrapper>
      <div
        color="red"
      >
        Hello World!
      </div>
    </StrictWrapper>,
    "name": "My Story",
  },
]
`;

exports[`The showcase converter should provide the select knob to a story 1`] = `
Array [
  Object {
    "component": <StrictWrapper>
      <div
        color="red"
      >
        Hello World!
      </div>
    </StrictWrapper>,
    "name": "My Story",
  },
]
`;

exports[`The showcase converter should turn off strict mode 1`] = `
Array [
  Object {
    "component": <div>
      Hello World!
    </div>,
    "name": "My Story",
  },
]
`;

exports[`White Background Decorator 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "backgroundColor": "rgba(255,255,255,1.00)",
      "bottom": "0px",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "left": "0px",
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
      "position": "absolute",
      "right": "0px",
      "top": "0px",
    }
  }
>
  <div
    className="css-text-76zvg2"
    dir="auto"
  >
    I am in Storybook!
  </div>
</div>
`;
